--- a/modules/home-manager/desktop/hyprland/hyprland.conf
+++ b/modules/home-manager/desktop/hyprland/hyprland.conf
@@ -8,18 +8,17 @@ monitor = eDP-1, preferred, auto, 2
 # Execute your favorite apps at launch
 exec-once = hypridle
 exec-once = gnome-keyring-daemon --start --components=secrets
-exec-once = kanshi
 exec-once = nm-applet --indicator
 exec-once = swaync
 exec-once = ulauncher --hide-window
 exec-once = waybar
 exec-once = wl-paste --watch cliphist store
 exec-once = wlsunset -l 52.23 -L 21.01
+exec-once = discord
 
 # Input device setting
 input {
-    kb_layout = pl,ru
-    kb_options = grp:win_space_toggle
+    kb_layout = pl
     repeat_delay = 250
     repeat_rate = 40
 
@@ -132,10 +131,11 @@ windowrule = stayfocused, ^(ulauncher)$
 
 # Assign applications to specific workspaces
 windowrule = workspace 1, ^(brave-browser)$
-windowrule = workspace 2, ^(Alacritty)$
+windowrule = workspace 2, ^(kitty)$
 windowrule = workspace 3, ^(org\.telegram\.desktop)$
 windowrule = workspace 4, ^(com\.obsproject\.Studio)$
 windowrule = workspace 4, ^(steam)$
+windowrule = workspace 4, ^(discord)$
 windowrule = workspace 5 silent, ^(zoom)$
 windowrule = workspace 6, ^steam_app_\d+$
 windowrule = workspace special, ^(gnome-pomodoro)$
@@ -144,7 +144,7 @@ windowrulev2 = workspace special silent, title:^(.*is sharing (your screen|a win
 # Bindings
 $mainMod = SUPER
 
-bind = $mainMod SHIFT, Return, exec, alacritty
+bind = $mainMod SHIFT, Return, exec, kitty
 bind = $mainMod SHIFT, B, exec, brave
 bind = $mainMod SHIFT, F, exec, nautilus
 bind = $mainMod SHIFT, T, exec, telegram-desktop
