--- a/modules/home-manager/desktop/hyprland/hyprland.conf
+++ b/modules/home-manager/desktop/hyprland/hyprland.conf
@@ -2,8 +2,7 @@
 exec-once = hyprpaper
 
 # Monitor settings
-monitor = DP-1, preferred, auto, 1
-monitor = eDP-1, preferred, auto, 2
+monitor = HDMI-A-1, preferred, auto, 1
 
 # Execute your favorite apps at launch
 exec-once = hypridle
@@ -113,6 +112,8 @@ windowrule = float, ^(gnome-calculator|org\.gnome\.Calculator)$
 windowrule = float, ^(nm-connection-editor)$
 windowrule = float, ^(org.pulseaudio.pavucontrol)$
 windowrule = float, ^(ulauncher)$
+windowrule = float, ^(steam)$
+windowrule = float, ^(discord)$
 
 # Remove border for specific applications
 windowrule = noborder, ^(ulauncher)$
@@ -131,7 +132,6 @@ windowrule = stayfocused, ^(ulauncher)$
 
 # Assign applications to specific workspaces
 windowrule = workspace 1, ^(brave-browser)$
-windowrule = workspace 2, ^(kitty)$
 windowrule = workspace 3, ^(org\.telegram\.desktop)$
 windowrule = workspace 4, ^(com\.obsproject\.Studio)$
 windowrule = workspace 4, ^(steam)$
