--- a/modules/home-manager/desktop/hyprland/hyprland.conf
+++ b/modules/home-manager/desktop/hyprland/hyprland.conf
@@ -13,7 +13,6 @@ exec-once = ulauncher --hide-window
 exec-once = waybar
 exec-once = wl-paste --watch cliphist store
 exec-once = wlsunset -l 52.23 -L 21.01
-exec-once = discord
 
 # Input device setting
 input {
@@ -100,6 +99,7 @@ device {
 }
 
 # Window rules
+
 # Center specific windows
 windowrule = center 1, ^(.blueman-manager-wrapped)$
 windowrule = center 1, ^(gnome-calculator|org\.gnome\.Calculator)$
@@ -112,13 +112,19 @@ windowrule = float, ^(gnome-calculator|org\.gnome\.Calculator)$
 windowrule = float, ^(nm-connection-editor)$
 windowrule = float, ^(org.pulseaudio.pavucontrol)$
 windowrule = float, ^(ulauncher)$
-windowrule = float, ^(steam)$
-windowrule = float, ^(discord)$
+
+#Workspace 1
+exec-once = bash -c "kitty"
+
+# Workspace 4 - Gaming
+windowrule = workspace 4, ^(?i).*(discord|steam).*$
+exec-once = bash -c "discord"
+exec-once = bash -c "steam"
 
 # Remove border for specific applications
 windowrule = noborder, ^(ulauncher)$
 
-# Set size for specific windows
+# Set size for specific windowss
 windowrule = size 50%, ^(.blueman-manager-wrapped)$
 windowrule = size 50%, ^(nm-connection-editor)$
 windowrule = size 50%, ^(org.pulseaudio.pavucontrol)$
@@ -131,14 +137,6 @@ windowrule = stayfocused, ^(swappy)$
 windowrule = stayfocused, ^(ulauncher)$
 
 # Assign applications to specific workspaces
-windowrule = workspace 1, ^(brave-browser)$
-windowrule = workspace 3, ^(org\.telegram\.desktop)$
-windowrule = workspace 4, ^(com\.obsproject\.Studio)$
-windowrule = workspace 4, ^(steam)$
-windowrule = workspace 4, ^(discord)$
-windowrule = workspace 5 silent, ^(zoom)$
-windowrule = workspace 6, ^steam_app_\d+$
-windowrule = workspace special, ^(gnome-pomodoro)$
 windowrulev2 = workspace special silent, title:^(.*is sharing (your screen|a window)\.)$
 
 # Bindings
@@ -148,7 +146,6 @@ bind = $mainMod SHIFT, Return, exec, kitty
 bind = $mainMod SHIFT, B, exec, brave
 bind = $mainMod SHIFT, F, exec, nautilus
 bind = $mainMod SHIFT, T, exec, telegram-desktop
-bind = CTRL ALT, P, exec, gnome-pomodoro --start-stop
 bind = $mainMod, Return, layoutmsg, swapwithmaster
 bind = $mainMod, O, layoutmsg, orientationcycle
 bind = $mainMod, Q, killactive,
@@ -246,7 +243,3 @@ bind = , XF86AudioMicMute, exec, pamixer --default-source --toggle-mute
 # Adjust mic sensitivity
 bind = SHIFT, XF86AudioRaiseVolume, exec, pamixer --increase 10 --default-source
 bind = SHIFT, XF86AudioLowerVolume, exec, pamixer --decrease 10 --default-source
-
-# Adjust keyboard backlight
-bind = SHIFT, XF86MonBrightnessUp, exec, brightnessctl -d tpacpi::kbd_backlight set +33%
-bind = SHIFT, XF86MonBrightnessDown, exec, brightnessctl -d tpacpi::kbd_backlight set 33%-
