--- a/modules/home-manager/desktop/hyprland/hyprland.conf
+++ b/modules/home-manager/desktop/hyprland/hyprland.conf
@@ -2,7 +2,7 @@
 exec-once = hyprpaper
 
 # Monitor settings
-monitor = HDMI-A-1, preferred, auto, 1
+monitor = HDMI-A-1, 3840x2160@120, 0x0, 1
 
 # Execute your favorite apps at launch
 exec-once = hypridle
@@ -124,7 +124,7 @@ exec-once = bash -c "steam"
 # Remove border for specific applications
 windowrule = noborder, ^(ulauncher)$
 
-# Set size for specific windowss
+# Set size for specific windows
 windowrule = size 50%, ^(.blueman-manager-wrapped)$
 windowrule = size 50%, ^(nm-connection-editor)$
 windowrule = size 50%, ^(org.pulseaudio.pavucontrol)$
