--- a/modules/home-manager/desktop/hyprland/hyprland.conf
+++ b/modules/home-manager/desktop/hyprland/hyprland.conf
@@ -2,7 +2,7 @@
 exec-once = hyprpaper
 
 # Monitor settings
-monitor = HDMI-A-1, 3840x2160@120, 0x0, 1
+monitor = HDMI-A-1, 3840x2160@120, 0x0, 1, vrr, 1
 
 # Execute your favorite apps at launch
 exec-once = hypridle
