--- a/modules/home-manager/desktop/hyprland/hyprland.conf
+++ b/modules/home-manager/desktop/hyprland/hyprland.conf
@@ -50,10 +50,10 @@ decoration {
         passes = 1
     }
     shadow {
-        enabled = false
-        range = 4
+        enabled = true
+        range = 30
         render_power = 3
-        color = rgba(1a1a1aee)
+        color = 0x44000000
     }
 }
 
