Fix windowrule update hyprland

--- a/modules/home-manager/desktop/hyprland/hyprland.conf
+++ b/modules/home-manager/desktop/hyprland/hyprland.conf
@@ -94,50 +94,50 @@ misc {
 }
 
 device {
-  name = epic-mouse-v1
-  sensitivity = -0.5
+    name = epic-mouse-v1
+    sensitivity = -0.5
 }
 
 # Window rules
 
 # Center specific windows
-windowrule = center 1, ^(.blueman-manager-wrapped)$
-windowrule = center 1, ^(gnome-calculator|org\.gnome\.Calculator)$
-windowrule = center 1, ^(nm-connection-editor)$
-windowrule = center 1, ^(org.pulseaudio.pavucontrol)$
+windowrule = center 1, class:^(.blueman-manager-wrapped)$
+windowrule = center 1, class:^(gnome-calculator|org\.gnome\.Calculator)$
+windowrule = center 1, class:^(nm-connection-editor)$
+windowrule = center 1, class:^(org.pulseaudio.pavucontrol)$
 
 # Float specific windows
-windowrule = float, ^(.blueman-manager-wrapped)$
-windowrule = float, ^(gnome-calculator|org\.gnome\.Calculator)$
-windowrule = float, ^(nm-connection-editor)$
-windowrule = float, ^(org.pulseaudio.pavucontrol)$
-windowrule = float, ^(ulauncher)$
+windowrule = float, class:^(.blueman-manager-wrapped)$
+windowrule = float, class:^(gnome-calculator|org\.gnome\.Calculator)$
+windowrule = float, class:^(nm-connection-editor)$
+windowrule = float, class:^(org.pulseaudio.pavucontrol)$
+windowrule = float, class:^(ulauncher)$
 
 #Workspace 1
 exec-once = bash -c "kitty"
 
 # Workspace 4 - Gaming
-windowrule = workspace 4, ^(?i).*(discord|steam).*$
+windowrule = workspace 4, class:^(?i).*(discord|steam).*$
 exec-once = bash -c "discord"
 exec-once = bash -c "steam"
 
 # Remove border for specific applications
-windowrule = noborder, ^(ulauncher)$
+windowrule = noborder, class:^(ulauncher)$
 
 # Set size for specific windows
-windowrule = size 50%, ^(.blueman-manager-wrapped)$
-windowrule = size 50%, ^(nm-connection-editor)$
-windowrule = size 50%, ^(org.pulseaudio.pavucontrol)$
+windowrule = size 50%, class:^(.blueman-manager-wrapped)$
+windowrule = size 50%, class:^(nm-connection-editor)$
+windowrule = size 50%, class:^(org.pulseaudio.pavucontrol)$
 
 # Keep focus on specific windows when they open
-windowrule = stayfocused, ^(.blueman-manager-wrapped)$
-windowrule = stayfocused, ^(gnome-calculator|org\.gnome\.Calculator)$
-windowrule = stayfocused, ^(org.pulseaudio.pavucontrol)$
-windowrule = stayfocused, ^(swappy)$
-windowrule = stayfocused, ^(ulauncher)$
+windowrule = stayfocused, class:^(.blueman-manager-wrapped)$
+windowrule = stayfocused, class:^(gnome-calculator|org\.gnome\.Calculator)$
+windowrule = stayfocused, class:^(org.pulseaudio.pavucontrol)$
+windowrule = stayfocused, class:^(swappy)$
+windowrule = stayfocused, class:^(ulauncher)$
 
 # Assign applications to specific workspaces
-windowrulev2 = workspace special silent, title:^(.*is sharing (your screen|a window)\.)$
+windowrule = workspace special silent, title:^(.*is sharing (your screen|a window)\.)$
 
 # Bindings
 $mainMod = SUPER
@@ -148,7 +148,7 @@ bind = $mainMod SHIFT, F, exec, nautilus
 bind = $mainMod SHIFT, T, exec, telegram-desktop
 bind = $mainMod, Return, layoutmsg, swapwithmaster
 bind = $mainMod, O, layoutmsg, orientationcycle
-bind = $mainMod, Q, killactive,
+bind = $mainMod, Q, killactive
 bind = CTRL ALT, Q, exit
 bind = $mainMod, F, togglefloating
 bind = $mainMod, M, fullscreen
