--- a/modules/home-manager/desktop/hyprland/hyprland.conf
+++ b/modules/home-manager/desktop/hyprland/hyprland.conf
@@ -117,7 +117,7 @@ windowrule = float, class:^(ulauncher)$
 exec-once = bash -c "kitty"
 
 # Workspace 4 - Gaming
-windowrule = workspace 4, class:^(?i).*(discord|steam).*$
+windowrule = workspace special silent, 4, class:^(?i).*(discord|steam).*$
 exec-once = bash -c "discord"
 exec-once = bash -c "steam"
 
@@ -135,9 +135,6 @@ windowrule = stayfocused, class:^(gnome-calculator|org\.gnome\.Calculator)$
 windowrule = stayfocused, class:^(org.pulseaudio.pavucontrol)$
 windowrule = stayfocused, class:^(swappy)$
 windowrule = stayfocused, class:^(ulauncher)$
-
-# Assign applications to specific workspaces
-windowrule = workspace special silent, title:^(.*is sharing (your screen|a window)\.)$
 
 # Bindings
 $mainMod = SUPER
