--- a/modules/home-manager/desktop/hyprland/hyprland.conf
+++ b/modules/home-manager/desktop/hyprland/hyprland.conf
@@ -114,12 +114,12 @@ windowrule = float, class:^(org.pulseaudio.pavucontrol)$
 windowrule = float, class:^(ulauncher)$
 
 #Workspace 1
-exec-once = bash -c "kitty"
+exec-once = [workspace 1] kitty
 
 # Workspace 4 - Gaming
-windowrule = workspace special silent, 4, class:^(?i).*(discord|steam).*$
-exec-once = bash -c "discord"
-exec-once = bash -c "steam"
+windowrule = workspace 4 silent, class:^(?i).*(discord|steam).*$
+exec-once = [workspace 4 silent] discord
+exec-once = [workspace 4 silent] steam
 
 # Remove border for specific applications
 windowrule = noborder, class:^(ulauncher)$
