--- a/modules/home-manager/desktop/hyprland/hyprland.conf
+++ b/modules/home-manager/desktop/hyprland/hyprland.conf
@@ -11,8 +11,8 @@ exec-once = nm-applet --indicator
 exec-once = swaync
 exec-once = ulauncher --hide-window
 exec-once = waybar
-exec-once = wl-paste --watch cliphist store
 exec-once = wlsunset -l 52.23 -L 21.01
+exec-once = clipse -listen
 
 # Input device setting
 input {
@@ -112,6 +112,8 @@ windowrule = float, class:^(gnome-calculator|org\.gnome\.Calculator)$
 windowrule = float, class:^(nm-connection-editor)$
 windowrule = float, class:^(org.pulseaudio.pavucontrol)$
 windowrule = float, class:^(ulauncher)$
+windowrule = float, class:^(clipse)$
+windowrule = size 622 652, class:^(clipse)$
 
 #Workspace 1
 exec-once = [workspace 1] kitty
@@ -204,7 +206,7 @@ bind = $mainMod, A, exec, wofi --show drun --allow-images
 bind = CTRL ALT, C, centerwindow
 
 # Clipboard
-bind = ALT SHIFT, V, exec, cliphist list | wofi --show dmenu | cliphist decode | wl-copy
+bind = $mainMod, V, exec, kitty --class clipse -e 'clipse'
 
 # Ulauncher
 bind = CTRL, Space, exec, ulauncher-toggle
