--- a/modules/home-manager/desktop/hyprland/hyprland.conf
+++ b/modules/home-manager/desktop/hyprland/hyprland.conf
@@ -118,10 +118,14 @@ windowrule = size 622 652, class:^(clipse)$
 #Workspace 1
 exec-once = [workspace 1] kitty
 
-# Workspace 4 - Gaming
+# Gaming
 windowrule = workspace 4 silent, class:^(?i).*(discord|steam).*$
 exec-once = [workspace 4 silent] discord
 exec-once = [workspace 4 silent] steam
+
+windowrule = fullscreen, class:^(steam_app_[0-9]+)$
+windowrule = workspace 10, class:^(steam_app_[0-9]+)$
+workspace = 10, border:false, rounding:false
 
 # Remove border for specific applications
 windowrule = noborder, class:^(ulauncher)$
