Gaming: Support Xbox controllers, add sunshine, no idle lock on fullscreen

--- a/modules/home-manager/desktop/hyprland/hyprland.conf
+++ b/modules/home-manager/desktop/hyprland/hyprland.conf
@@ -126,6 +126,7 @@ exec-once = [workspace 4 silent] steam
 windowrule = fullscreen, class:^(steam_app_[0-9]+)$
 windowrule = workspace 10, class:^(steam_app_[0-9]+)$
 workspace = 10, border:false, rounding:false
+windowrule = idleinhibit fullscreen, class:.*
 
 # Remove border for specific applications
 windowrule = noborder, class:^(ulauncher)$
