--- a/dotfiles/kitty/nvimSplit.conf
+++ b/dotfiles/kitty/nvimSplit.conf
@@ -1,7 +1,7 @@
 layout splits
 
-launch --type=window --cwd=current nvim
+launch --type=window --cwd=current nvlazy
 
-launch --type=window --location=bottom --cwd=current
+launch --type=window --location=hsplit --cwd=current
 
 focus 0
